fix article list alignment with different heights

--- a/src/less/style.less
+++ b/src/less/style.less
@@ -158,6 +158,7 @@ body > div > nav {
     opacity: 0.95;
     display: block;
     width: 100%;
+    font-size: 16px;
 }
 
 .intro {
